Fixed tooltip on top have broken layout.
Also removed shadow from phone inputs.

--- a/styles/sass/partials/_forms.scss
+++ b/styles/sass/partials/_forms.scss
@@ -20,6 +20,7 @@
     box-shadow: none;
     overflow: auto;
     -webkit-font-smoothing: antialiased;
+    appearance: none;
 
     &.error {
         border-color: $red;
